p7/tests/t088.err
Semantic error on line 5: Variable 'numbers' is not an array.
