p7/tests/t088.gpl
int numbers;

on akey
{
    numbers[42] = 11;
}
